js and jquery updating div

--- a/README.html
+++ b/README.html
@@ -35,3 +35,6 @@ $(document).ready(function(){
 <!-- In this example, $("span").closest("ul") means that we search for the first ancestor of span that is an ul element. The CLOSEST ancestor of span is li, but since we are looking for a div, jQuery skips the li element and continue the search for the next ancestor, on and on until it locates our search for ul. If we use the parents() method instead, it will return both ul ancestors. --> 
 </html>
 ========================================================
+                                //document.getElementById("someID").html("message to be displayed");
+                                $("#someID").html("message to be displayed");
+
