js and jquery function

--- a/README.html
+++ b/README.html
@@ -37,4 +37,7 @@ $(document).ready(function(){
 ========================================================
                                 //document.getElementById("someID").html("message to be displayed");
                                 $("#someID").html("message to be displayed");
+==============================================================
+                                // $('#enter').click(function(){});
+                                $('#enter').on('click',function(e){});
 
