--- a/README.html
+++ b/README.html
@@ -40,4 +40,43 @@ $(document).ready(function(){
 ==============================================================
                                 // $('#enter').click(function(){});
                                 $('#enter').on('click',function(e){});
+===========================================================
+                                $(document).ready(function(){
+                                    $("#btn1").click(function(){
+                                        $("p").append(" <b>Appended text</b>.");
+                                    });
+
+                                    $("#btn2").click(function(){
+                                        $("ol").append("<li>Appended item</li>");
+                                    });
+                                });
+-----------------------------------------------
+                                $(document).ready(function(){
+                                    $("#btn1").click(function(){
+                                        $("p").prepend("<b>Prepended text</b>. ");
+                                    });
+                                    $("#btn2").click(function(){
+                                        $("ol").prepend("<li>Prepended item</li>");
+                                    });
+                                });
+----------------------------imp concept--------------------
+                            function appendText() {
+                                var txt1 = "<p>Text.</p>";              // Create text with HTML
+                                var txt2 = $("<p></p>").text("Text.");  // Create text with jQuery
+                                var txt3 = document.createElement("p");
+                                txt3.innerHTML = "Text.";               // Create text with DOM
+                                $("body").append(txt1, txt2, txt3);     // Append new elements
+                            }
+-----------------------------add afer an before---------
+                            $(document).ready(function(){
+                                $("#btn1").click(function(){
+                                    $("img").before("<b>Before</b>");
+                                });
+
+                                $("#btn2").click(function(){
+                                    $("img").after("<i>After</i>");
+                                });
+                            });
+--------------------------------------------------------
+
 
