--- a/README.html
+++ b/README.html
@@ -77,6 +77,14 @@ $(document).ready(function(){
                                     $("img").after("<i>After</i>");
                                 });
                             });
---------------------------------------------------------
+-----------------------enter event listener---------------------------------
+                    $(document).keypress(function(event) {
+                        if (event.key === "Enter") {
+                            alert('enter');
+                        }else {
+                            alert('not enter');
+                        }
+                    });
+-----------------------------------------------------------------
 
 
