auto correct and autocapitalize

--- a/README.html
+++ b/README.html
@@ -111,5 +111,6 @@ $(function() {
         });
     });
 ----text() and val() are function----------
+What's your name: <input type=text size=20 autocorrect=off autocapitalize=words>
 
 
