google font and effect

--- a/README.html
+++ b/README.html
@@ -112,5 +112,28 @@ $(function() {
     });
 ----text() and val() are function----------
 What's your name: <input type=text size=20 autocorrect=off autocapitalize=words>
-
-
+------google font, text-shadow and effect--------https://developers.google.com/fonts/docs/getting_started
+<html>
+  <head>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Indie+Flower|Kaushan+Script& effect=shadow-multiple|3d-float">
+    <style>
+      #raj {
+        font-family: 'Kaushan Script', 							cursive;
+		  text-shadow: 5px 5px 5px blue;
+        font-size: 60px;
+	
+		
+      }
+		   #mis {
+			   font-family: 'Indie+Flower', cursive;
+		font-size: 60px;
+      }
+    </style>
+  </head>
+  <body bgcolor="#E6E6FA">
+    <div id="raj" class="font-effect-fire-animation">Making the Web Beautiful!</div>
+	  <div id="mis" class="font-effect-fire-animation">Making the Web Beautiful!</div>
+  </body>
+</html>
+-------------------------------
